--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,5 +8,5 @@
 <body>
   <div id="app"></div>
 </body>
-<script src="/toys-js/app.js"></script>
+<script src="/vehicles-js/app.js"></script>
 </html>
